<resources>
    <string name="app_name">Dizabo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="hello_there">Hello there!</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="sign_in">sign in</string>
    <string name="register">Register</string>
    <string name="signup">Signup</string>
    <string name="complete_registration">Complete registration</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="our_investment_plans">Our Investment Plans</string>
    <string name="_10000_aed">10000 AED</string>
    <string name="apply_now"><![CDATA[Apply Now >]]></string>
    <string name="get_20_profit">Get 20% profit</string>
    <string name="enter_otp_received">Enter OTP Received at %s</string>
    <string name="verify_otp">Verify OTP</string>
</resources>