<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    app:cardCornerRadius="15dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/itemImageView"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:src="@drawable/baseline_shopping_basket_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/priceText"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:text="@string/_10000_aed"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/profitPercentage"
            app:layout_constraintEnd_toEndOf="@+id/profitPercentage"
            app:layout_constraintStart_toStartOf="@+id/profitPercentage"
            app:layout_constraintTop_toBottomOf="@+id/itemImageView" />

        <TextView
            android:id="@+id/profitPercentage"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/get_20_profit"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/applyNowButton"
            android:layout_width="80dp"
            android:layout_marginTop="5dp"
            android:layout_height="50dp"
            android:text="@string/apply_now"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/itemImageView"
            app:layout_constraintStart_toEndOf="@+id/profitPercentage"
            app:layout_constraintTop_toBottomOf="@+id/itemImageView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>